--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="jumbotron">
-    <h1>.NET 💜 Dogs, especially Alfie</h1>
+    <h1>I 💜 Dogs, especially Alfie</h1>
     <p class="lead">Example .NET app to Azure App Service.</p>
 </div>
